Courses/202312/Templates/Ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressdeployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ingress
  template:
    metadata:
      name: ingress-deployment
      labels:
        app: ingress
    spec:
      containers:
      - image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        name: andersand
