Courses/202312/Templates/Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  type: ClusterIP
  selector:
    app: ingress
  ports:
  - port: 80
    targetPort: 80
